# qscope

./: .editorconfig  .gitattributes  .gitignore  DEVDOCS.md  INSTALL.md  LICENSE  README.md  dodo.py  pyproject.toml  pytest.ini  qscope.prospector.yaml  setup.py
docs/: index.html  index.js
docs/qscope/: docs.html  index.html  scripting.html
examples/: example_cwesr.py  example_cwesr_long_exposure.py  example_image_fitting.ipynb  example_mock_cwesr.py  example_pesr.py  example_pl_snapshot.py  example_plot_mpl.py  example_take_mpl.py  loading_data.ipynb  readme_example.py  role_system_example.py  sequence_kernel_programming.ipynb
examples/analysis/: allan_dev.py
examples/devices/: controlling_andor_sona.ipynb  system_commands.ipynb  test_andor.ipynb  test_andor_sona.ipynb  test_andor_zyla.ipynb  test_aps100.ipynb  test_device_pulseblaster.ipynb  test_photometrics_prime.ipynb  test_rf_smb100a.ipynb  test_rf_windfreak.ipynb  test_system_server.ipynb
examples/routines/: cw_esr_param_sweep.py  (+6 more)
other/: 2024-09-06_spectrometer_test.ipynb  copilot_client.py  copilot_server.py  copilot_zmq_multisocket.md  copilot_zmq_subreq.md  downsample.py  ex_gui.py  ex_qt_socket_notifier.py  mpl_API_docs.html  test_si_units.py  test_si_units_single.py
proprietary_artefacts/: README.md
test/: Connecting to a camera.ipynb  Connecting to a sig gen.ipynb  Connecting to a smu.ipynb  Connecting to an rfsource.ipynb  conftest.py  picoscope_long_capture.py  smu_testing.py  test_fit_model.ipynb  test_linux_zyla42.py  test_list_generation.ipynb  test_meas_overview_gen.ipynb  video.py
(+342 files in other folders)
