[project]
name = "qscope"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DavidBroadway", email = "88707516+DavidBroadway@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "click-option-group>=0.5.7",
    "cmap>=0.6.0",
    "loguru>=0.7.3",
    "mashumaro>=3.15",
    "matplotlib>=3.10.1",
    "matplotlib-scalebar>=0.9.0",
    "msgpack>=1.1.0",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "psutil>=7.0.0",
    "pyqt6>=6.9.0",
    "pytest-asyncio>=0.26.0",
    "pyusb>=1.3.1",
    "pyvisa>=1.15.0",
    "pyvisa-py>=0.8.0",
    "pyzmq>=26.4.0",
    "reportlab>=4.4.0",
    "rich>=14.0.0",
    "ruff>=0.11.7",
    "scipy>=1.15.2",
    "setproctitle>=1.3.6",
    "setuptools-git>=1.2",
    "simplejson>=3.20.1",
    "tqdm>=4.67.1",
    "wheel>=0.45.1",
    "yagmail>=0.15.293",
    "zeroconf>=0.146.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "qscope",
]

[tool.uv.sources]
qscope = { workspace = true }

[project.urls]
Homepage = "https://github.com/qnslab/qscope"


[project.scripts]
qscope = "qscope.cli:cli"
